moved port variable from server.js to .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-const port = 3000;
-const mongoDbServer = '127.0.0.1:27017';
-const mongoDatabase = '';
-const mongoCollection = '';
+port = 3000
+mongoDbServer = 127.0.0.1:27017
+mongoDatabase = TestDatabase
+mongoCollection = TestCollection
