--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/mongodb": "^3.1.28",
-    "@types/mongoose": "^5.5.7"
+    "@types/mongoose": "^5.5.7",
+    "eslint": "^6.0.1"
   }
 }
