--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
-    "mongoose": "^5.6.4"
+    "mongoose": "^5.6.4",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "@types/mongodb": "^3.1.28",
