--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jwt-decode": "^2.2.0",
         "mongodb": "^3.2.7",
         "mongoose": "^5.6.4",
+        "prepend-http": "^3.0.1",
         "sha256": "^0.2.0"
     },
     "devDependencies": {
