--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Ferrilata Cohort, Angular project team, Backend",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha",
         "start": "node server.js"
     },
     "repository": {
@@ -32,6 +32,10 @@
     },
     "devDependencies": {
         "@types/mongodb": "^3.1.28",
-        "@types/mongoose": "^5.5.7"
+        "@types/mongoose": "^5.5.7",
+        "chai": "^4.2.0",
+        "mocha": "^6.2.0",
+        "request": "^2.88.0",
+        "should": "^13.2.3"
     }
 }
